[tool.poetry]
name = "calorento"
version = "0.1.0"
description = "Bot do Mastodon que reclama do calor"
authors = ["Dani <danii.dias@proton.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
